# legacy-old-hercules

./: .gitignore  .stylish-haskell.yaml  .travis.yml  README.md  default.nix  haskell-packages.nix  hercules.cabal  hercules.conf.sample  hercules.nix  pkgs.nix  readme.md  shell.nix
app/: Main.hs
backend/: LICENSE  create-hercules-table.sql  default.nix  example-config.yaml  hercules.cabal  hercules.conf.sample
backend/app/: Main.hs
backend/gen-docs/: Main.hs
backend/gen-elm/: Main.hs
backend/src/Data/ByteString/: Extra.hs
backend/src/Hercules/: API.hs  Config.hs  Database.hs  Encryption.hs  Lib.hs  Log.hs  OAuth.hs  Query.hs  ServerEnv.hs  Static.hs  Swagger.hs
backend/src/Hercules/Database/: Extra.hs  Hercules.hs  Hydra.hs
backend/src/Hercules/Database/Hercules/: Migration.hs  Ready.hs
backend/src/Hercules/OAuth/: Authenticators.hs  Types.hs  User.hs
backend/src/Hercules/OAuth/Authenticators/: GitHub.hs  Google.hs
backend/src/Hercules/Query/: Hercules.hs  Hydra.hs
backend/src/Network/URI/: Extra.hs
backend/src/Opaleye/: Extra.hs
backend/src/Servant/: Mandatory.hs
backend/src/migrations/: 20170709_recreate-users.sql  create-users.sql
docs/: Makefile  conf.py  default.nix  faq.rst  getting-started.rst  index.rst
frontend/: .gitignore  README.md  TODO  default.nix  elm-package.json  package.json  webpack.config.js
frontend/src/: Main.elm  Models.elm  Msg.elm  Ports.elm  Route.elm  Update.elm  Urls.elm  Utils.elm  View.elm  index.html  index.js
frontend/src/Components/: Breadcrumbs.elm  Help.elm  LiveSearch.elm  Navbar.elm
frontend/src/Models/: AppEnv.elm
frontend/src/Pages/: Admin.elm  Build.elm  Evaluation.elm  Jobset.elm  Login.elm  Project.elm  Queue.elm  Search.elm  User.elm
frontend/src/Request/: User.elm
gen-docs/: Main.hs
gen-elm/: Main.hs
haskell-nix-build/: default.nix  haskell-nix-build.cabal
haskell-nix-build/build-hook/: Main.hs
haskell-nix-build/src/Nix/: Build.hs
haskell-nix-build/src/System/IO/: Blocking.hs
src/: API.hs  Lib.hs
src/Control/Monad/Except/: Extra.hs
src/Hercules/: API.hs  Config.hs  Database.hs  Lib.hs  OAuth.hs  Query.hs  ServerEnv.hs  Static.hs
src/Hercules/Database/: Extra.hs
src/Hercules/OAuth/: Authenticators.hs  Google.hs  Types.hs  User.hs
src/Hercules/OAuth/Authenticators/: GitHub.hs  Google.hs
src/Servant/: Mandatory.hs  Redirect.hs
store/: CMakeLists.txt  default.nix  readme.md
store/src/: DummyStore.cpp
