name:                hercules
version:             0.1.0.0
synopsis:            A server to interface with a Hydra database
description:         Please see README.md
homepage:            https://github.com/expipiplus1/hercules#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          alcmene@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hercules.Lib
                       Hercules.API
                       Hercules.Config
                       Hercules.Database
  build-depends:       base                >= 4.7 && < 5
                     , aeson
                     , bytestring
                     , opaleye
                     , postgresql-simple
                     , product-profunctors
                     , safe
                     , servant-auth-server
                     , servant-elm
                     , servant-server
                     , text
                     , wai
                     , warp
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hercules
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , bytestring
                     , optparse-applicative
  default-language:    Haskell2010

executable gen-elm
  hs-source-dirs:      gen-elm
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , elm-export
                     , servant-auth-server
                     , servant-elm
                     , servant-foreign
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hercules
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/hercules
