name:                hercules
version:             0.1.0.0
synopsis:            A server to interface with a Hydra database
description:         Please see README.md
homepage:            https://github.com/expipiplus1/hercules#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          alcmene@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Hercules.Lib
                       Hercules.API
                       Hercules.Config
                       Hercules.Database.Extra
                       Hercules.Database.Hercules
                       Hercules.Database.Hercules.Ready
                       Hercules.Database.Hydra
                       Hercules.OAuth
                       Hercules.OAuth.Authenticators
                       Hercules.OAuth.Authenticators.GitHub
                       Hercules.OAuth.Authenticators.Google
                       Hercules.OAuth.Types
                       Hercules.OAuth.User
                       Hercules.Query.Hydra
                       Hercules.Query.Hercules
                       Hercules.Log
                       Hercules.ServerEnv
                       Hercules.Static
                       Control.Monad.Except.Extra
                       Network.URI.Extra
                       Servant.Mandatory
                       Servant.Redirect
                       Opaleye.Extra
  build-depends:       base                >= 4.7 && < 5
                     , aeson
                     , async
                     , blaze-html
                     , bytestring
                     , file-embed
                     , github
                     , hoauth2
                     , http-client
                     , http-client-tls
                     , interpolatedstring-perl6
                     , jose
                     , logging-effect
                     , markdown
                     , monad-control
                     , mtl
                     , network-uri
                     , opaleye
                     , postgresql-simple
                     , postgresql-simple-migration
                     , product-profunctors
                     , profunctors
                     , resource-pool
                     , safe
                     , say
                     , servant-auth-server
                     , servant-blaze
                     , servant-elm
                     , servant-server
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
                     , wl-pprint-text
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hercules
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , bytestring
                     , optparse-applicative
                     , text
                     , yaml
  default-language:    Haskell2010

executable gen-elm
  hs-source-dirs:      gen-elm
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , elm-export
                     , optparse-applicative
                     , servant-auth-server
                     , servant-elm
                     , servant-foreign
                     , text
  default-language:    Haskell2010

executable gen-docs
  hs-source-dirs:      gen-docs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , lens
                     , pandoc
                     , servant-auth-server
                     , servant-docs
                     , servant-pandoc
                     , servant-server
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hercules
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/hercules
