name:                hercules
version:             0.1.0.0
synopsis:            A server to interface with a Hydra database
description:         Please see README.md
homepage:            https://github.com/expipiplus1/hercules#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          alcmene@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Control.Monad.Except.Extra
                       Data.ByteString.Extra
                       Hercules.Lib
                       Hercules.API
                       Hercules.Config
                       Hercules.Database.Extra
                       Hercules.Database.Hercules
                       Hercules.Database.Hercules.Migration
                       Hercules.Database.Hydra
                       Hercules.Encryption
                       Hercules.Log
                       Hercules.OAuth
                       Hercules.OAuth.Authenticators
                       Hercules.OAuth.Authenticators.GitHub
                       Hercules.OAuth.Authenticators.Google
                       Hercules.OAuth.Types
                       Hercules.OAuth.User
                       Hercules.Query.Hercules
                       Hercules.Query.Hydra
                       Hercules.ServerEnv
                       Hercules.Static
                       Hercules.Swagger
                       Network.URI.Extra
                       Opaleye.Extra
                       Servant.Mandatory
                       Servant.Redirect
  build-depends:       base                >= 4.7 && < 5
                     , aeson
                     , async
                     , blaze-html
                     , bytestring
                     , cryptonite
                     , file-embed
                     , github
                     , hoauth2
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , interpolatedstring-perl6
                     , jose
                     , lens
                     , logging-effect
                     , markdown
                     , memory
                     , monad-control
                     , mtl
                     , network-uri
                     , opaleye
                     , postgresql-simple
                     , postgresql-simple-migration
                     , product-profunctors
                     , profunctors
                     , resource-pool
                     , safe
                     , say
                     , servant-auth-server
                     , servant-auth-swagger
                     , servant-swagger-ui
                     , servant-swagger
                     , swagger2
                     , servant-blaze
                     , servant-elm
                     , servant-server
                     , text
                     , time
                     , wai
                     , wai-extra
                     , warp
                     , wl-pprint-text
                     , yaml
  default-language:    Haskell2010
  ghc-options:         -Wall

executable hercules
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , bytestring
                     , optparse-applicative
                     , text
                     , yaml
  default-language:    Haskell2010

executable gen-elm
  hs-source-dirs:      gen-elm
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , elm-export
                     , optparse-applicative
                     , servant-auth-server
                     , servant-elm
                     , servant-foreign
                     , text
  default-language:    Haskell2010

executable gen-docs
  hs-source-dirs:      gen-docs
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hercules
                     , bytestring
                     , aeson
                     , text
  default-language:    Haskell2010

test-suite test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , hspec
                     , hercules
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/expipiplus1/hercules
