name:                haskell-nix-build
version:             0.0.0.0
synopsis:            A small implementation on nix-build.
description:         Please see README.md
homepage:            https://github.com/expipiplus1/hercules#readme
license:             BSD3
license-file:        LICENSE
author:              Joe Hermaszewski
maintainer:          alcmene@monoid.al
copyright:           2016 Joe Hermaszewski
category:            Web
build-type:          Simple
extra-source-files:  default.nix shell.nix
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     
                       Nix.Build 
  other-modules:
  build-depends:       base                >= 4.7 && < 5
                     , network
                     -- , async
                     , bytestring
                     , directory
                     -- , extra
                     , filepath
                     , logging-effect
                     , wl-pprint-text
                     , mtl
                     -- , optparse-applicative
                     -- , pipes
                     -- , say
                     , stm
                     , temporary
                     , text
                     , transformers
                     , typed-process
                     -- , unix
                     , vector
  default-language:    Haskell2010
  ghc-options:         -Wall

source-repository head
  type:     git
  location: https://github.com/hercules-ci/hercules
